feat: loading spinner and other cleanup

--- a/src/Resources/Styles/1-variables/_app.scss
+++ b/src/Resources/Styles/1-variables/_app.scss
@@ -180,7 +180,7 @@ $navbar-brand-icon-color: $primary !default;
 $navbar-bg: #222831 !default;
 
 // Footer
-$footer-bg: $white !default;
+$footer-bg: $gray-700 !default;
 
 // Forms
 $input-bg: $white !default;
